// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Direksi QCPortal (snapshot) > renders empty pending audits state and matches snapshot 1`] = `
<div
  class="w-full h-full animate-[fadeIn_0.3s_ease-out]"
>
  <div
    class="min-h-[calc(100vh-var(--page-py)-var(--page-pb))]"
  >
    <header
      class="flex justify-between items-center border-b border-slate-100 pb-3 mb-[var(--section-gap)]"
      style="margin-bottom: var(--section-gap);"
    >
      <div>
        <h1
          class="text-dashboard-title uppercase"
        >
          Lab Audit
           
          <span
            class="text-status-action"
          >
            Terminal
          </span>
        </h1>
        <p
          class="font-bold text-slate-400 tracking-tight mt-1.5"
          style="font-size: var(--module-subtitle-size);"
        >
          QC Pass-Fail Certification Center
        </p>
      </div>
    </header>
    <div
      class="flex flex-col"
      style="gap: var(--section-gap);"
    >
      <div
        class="grid grid-cols-3 gap-8 mb-6"
      >
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-emerald-300 dark:border-emerald-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Pending Audits
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-emerald-600 dark:text-emerald-400"
              >
                0
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-emerald-500 rounded-full"
                    style="width: 100%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-emerald-600 dark:text-emerald-400"
                >
                  100
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-emerald-50 text-emerald-500 dark:bg-emerald-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-clipboard-check"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="4"
                    rx="1"
                    ry="1"
                    width="8"
                    x="8"
                    y="2"
                  />
                  <path
                    d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
                  />
                  <path
                    d="m9 14 2 2 4-4"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Pass Rate
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                50%
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-target"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="2"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Daily Completed
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                —
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-calendar"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2v4"
                  />
                  <path
                    d="M16 2v4"
                  />
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="4"
                  />
                  <path
                    d="M3 10h18"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="grid grid-cols-1 gap-8"
      >
        <div
          class="group/card flex flex-col gap-4 overflow-hidden text-sm text-text-main border shadow-[0_4px_6px_-1px_rgba(0,0,0,0.02)] transition-all duration-300 hover:shadow-[0_20px_25px_-5px_rgba(0,0,0,0.05)] hover:border-slate-300 has-data-[slot=card-footer]:pb-0 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 data-[size=sm]:has-data-[slot=card-footer]:pb-0 *:[img:first-child]:rounded-t-[--card-radius] *:[img:last-child]:rounded-b-[--card-radius] border-gray-200 bg-white"
          data-size="default"
          data-slot="card"
          style="border-radius: var(--card-radius); padding: var(--card-py) var(--card-px);"
        >
          <div
            class="group/card-header @container/card-header auto-rows-min gap-1 rounded-t-[--card-radius] px-[--card-px] group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3 flex flex-row items-center justify-between"
            data-slot="card-header"
          >
            <div>
              <div
                class="font-heading text-base leading-snug group-data-[size=sm]/card:text-sm font-bold text-slate-900 uppercase tracking-tighter flex items-center"
                data-slot="card-title"
                style="font-size: 14px;"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-clipboard-check mr-2 h-5 w-5 text-emerald-500"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="4"
                    rx="1"
                    ry="1"
                    width="8"
                    x="8"
                    y="2"
                  />
                  <path
                    d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
                  />
                  <path
                    d="m9 14 2 2 4-4"
                  />
                </svg>
                 STAGE INSPECTION INBOX
              </div>
              <div
                class="text-sm text-zinc-500"
                data-slot="card-description"
              >
                Live feed from the production floor - Waiting for verification.
              </div>
            </div>
            <span
              class="inline-flex items-center gap-1.5 text-[10px] font-black uppercase rounded-lg px-3 py-1 border shadow-sm bg-amber-50 text-amber-600 border-amber-100"
            >
              0
               PENDING AUDITS
            </span>
          </div>
          <div
            class="px-[--card-px] group-data-[size=sm]/card:px-3"
            data-slot="card-content"
          >
            <div
              class="rounded-xl border border-gray-200 overflow-hidden"
            >
              <div
                class="relative w-full overflow-x-auto"
                data-slot="table-container"
              >
                <table
                  class="w-full caption-bottom text-sm"
                  data-slot="table"
                >
                  <thead
                    class="[&_tr]:border-b bg-gray-50"
                    data-slot="table-header"
                  >
                    <tr
                      class="border-b transition-colors hover:bg-muted/50 has-aria-expanded:bg-muted/50 data-[state=selected]:bg-muted border-[var(--border-color)]"
                      data-slot="table-row"
                    >
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-table-header"
                        data-slot="table-head"
                      >
                        Batch Registry
                      </th>
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-table-header"
                        data-slot="table-head"
                      >
                        Completed Stage
                      </th>
                      <th
                        class="h-10 px-2 align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-table-header text-right"
                        data-slot="table-head"
                      >
                        Yield (Good)
                      </th>
                      <th
                        class="h-10 px-2 align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-table-header text-right"
                        data-slot="table-head"
                      >
                        Operational Status
                      </th>
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap text-foreground [&:has([role=checkbox])]:pr-0 w-[100px]"
                        data-slot="table-head"
                      />
                    </tr>
                  </thead>
                  <tbody
                    class="[&_tr:last-child]:border-0"
                    data-slot="table-body"
                  >
                    <tr
                      class="border-b transition-colors hover:bg-muted/50 has-aria-expanded:bg-muted/50 data-[state=selected]:bg-muted"
                      data-slot="table-row"
                    >
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-center py-24"
                        colspan="5"
                        data-slot="table-cell"
                      >
                        <p
                          class="text-zinc-800 font-black text-3xl uppercase tracking-tight italic opacity-20"
                        >
                          No Lab Pending Jobs
                        </p>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Direksi QCPortal (snapshot) > renders pending audits table and matches snapshot 1`] = `
<div
  class="w-full h-full animate-[fadeIn_0.3s_ease-out]"
>
  <div
    class="min-h-[calc(100vh-var(--page-py)-var(--page-pb))]"
  >
    <header
      class="flex justify-between items-center border-b border-slate-100 pb-3 mb-[var(--section-gap)]"
      style="margin-bottom: var(--section-gap);"
    >
      <div>
        <h1
          class="text-dashboard-title uppercase"
        >
          Lab Audit
           
          <span
            class="text-status-action"
          >
            Terminal
          </span>
        </h1>
        <p
          class="font-bold text-slate-400 tracking-tight mt-1.5"
          style="font-size: var(--module-subtitle-size);"
        >
          QC Pass-Fail Certification Center
        </p>
      </div>
    </header>
    <div
      class="flex flex-col"
      style="gap: var(--section-gap);"
    >
      <div
        class="grid grid-cols-3 gap-8 mb-6"
      >
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Pending Audits
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                2
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 0%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  0
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-clipboard-check"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="4"
                    rx="1"
                    ry="1"
                    width="8"
                    x="8"
                    y="2"
                  />
                  <path
                    d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
                  />
                  <path
                    d="m9 14 2 2 4-4"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Pass Rate
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                0%
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 0%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  0
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-target"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="2"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Daily Completed
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                —
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-calendar"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2v4"
                  />
                  <path
                    d="M16 2v4"
                  />
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="4"
                  />
                  <path
                    d="M3 10h18"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="grid grid-cols-1 gap-8"
      >
        <div
          class="group/card flex flex-col gap-4 overflow-hidden text-sm text-text-main border shadow-[0_4px_6px_-1px_rgba(0,0,0,0.02)] transition-all duration-300 hover:shadow-[0_20px_25px_-5px_rgba(0,0,0,0.05)] hover:border-slate-300 has-data-[slot=card-footer]:pb-0 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 data-[size=sm]:has-data-[slot=card-footer]:pb-0 *:[img:first-child]:rounded-t-[--card-radius] *:[img:last-child]:rounded-b-[--card-radius] border-gray-200 bg-white"
          data-size="default"
          data-slot="card"
          style="border-radius: var(--card-radius); padding: var(--card-py) var(--card-px);"
        >
          <div
            class="group/card-header @container/card-header auto-rows-min gap-1 rounded-t-[--card-radius] px-[--card-px] group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3 flex flex-row items-center justify-between"
            data-slot="card-header"
          >
            <div>
              <div
                class="font-heading text-base leading-snug group-data-[size=sm]/card:text-sm font-bold text-slate-900 uppercase tracking-tighter flex items-center"
                data-slot="card-title"
                style="font-size: 14px;"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-clipboard-check mr-2 h-5 w-5 text-emerald-500"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="4"
                    rx="1"
                    ry="1"
                    width="8"
                    x="8"
                    y="2"
                  />
                  <path
                    d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
                  />
                  <path
                    d="m9 14 2 2 4-4"
                  />
                </svg>
                 STAGE INSPECTION INBOX
              </div>
              <div
                class="text-sm text-zinc-500"
                data-slot="card-description"
              >
                Live feed from the production floor - Waiting for verification.
              </div>
            </div>
            <span
              class="inline-flex items-center gap-1.5 text-[10px] font-black uppercase rounded-lg px-3 py-1 border shadow-sm bg-amber-50 text-amber-600 border-amber-100"
            >
              2
               PENDING AUDITS
            </span>
          </div>
          <div
            class="px-[--card-px] group-data-[size=sm]/card:px-3"
            data-slot="card-content"
          >
            <div
              class="rounded-xl border border-gray-200 overflow-hidden"
            >
              <div
                class="relative w-full overflow-x-auto"
                data-slot="table-container"
              >
                <table
                  class="w-full caption-bottom text-sm"
                  data-slot="table"
                >
                  <thead
                    class="[&_tr]:border-b bg-gray-50"
                    data-slot="table-header"
                  >
                    <tr
                      class="border-b transition-colors hover:bg-muted/50 has-aria-expanded:bg-muted/50 data-[state=selected]:bg-muted border-[var(--border-color)]"
                      data-slot="table-row"
                    >
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-table-header"
                        data-slot="table-head"
                      >
                        Batch Registry
                      </th>
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-table-header"
                        data-slot="table-head"
                      >
                        Completed Stage
                      </th>
                      <th
                        class="h-10 px-2 align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-table-header text-right"
                        data-slot="table-head"
                      >
                        Yield (Good)
                      </th>
                      <th
                        class="h-10 px-2 align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-table-header text-right"
                        data-slot="table-head"
                      >
                        Operational Status
                      </th>
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap text-foreground [&:has([role=checkbox])]:pr-0 w-[100px]"
                        data-slot="table-head"
                      />
                    </tr>
                  </thead>
                  <tbody
                    class="[&_tr:last-child]:border-0"
                    data-slot="table-body"
                  >
                    <tr
                      class="border-b transition-colors has-aria-expanded:bg-muted/50 data-[state=selected]:bg-muted border-[var(--border-color)] hover:bg-gray-50"
                      data-slot="table-row"
                    >
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 font-semibold text-gray-900"
                        data-slot="table-cell"
                      >
                        BATCH-QC-001
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0"
                        data-slot="table-cell"
                      >
                        <span
                          class="inline-flex items-center gap-1.5 text-[10px] font-black uppercase rounded-lg px-3 py-1 border shadow-sm bg-slate-50 text-slate-600 border-slate-100"
                        >
                          MIXING
                        </span>
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-right font-semibold text-gray-700 tabular-nums"
                        data-slot="table-cell"
                      >
                        950
                         Units
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-right"
                        data-slot="table-cell"
                      >
                        <span
                          class="inline-flex items-center gap-1.5 text-[10px] font-black uppercase rounded-lg px-3 py-1 border shadow-sm bg-amber-50 text-amber-600 border-amber-100"
                        >
                          WAITING AUDIT
                        </span>
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-right"
                        data-slot="table-cell"
                      >
                        <button
                          class="group/button inline-flex shrink-0 items-center justify-center bg-clip-padding whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [a]:hover:bg-primary/80 h-7 gap-1 px-2.5 in-data-[slot=button-group]:rounded-lg has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3.5 bg-white text-slate-700 border border-[var(--border-color)] hover:bg-emerald-500 hover:text-white font-bold text-[10px] uppercase rounded-lg"
                          data-slot="button"
                          tabindex="0"
                          type="button"
                        >
                          INSPECT
                        </button>
                      </td>
                    </tr>
                    <tr
                      class="border-b transition-colors has-aria-expanded:bg-muted/50 data-[state=selected]:bg-muted border-[var(--border-color)] hover:bg-gray-50"
                      data-slot="table-row"
                    >
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 font-semibold text-gray-900"
                        data-slot="table-cell"
                      >
                        BATCH-QC-001
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0"
                        data-slot="table-cell"
                      >
                        <span
                          class="inline-flex items-center gap-1.5 text-[10px] font-black uppercase rounded-lg px-3 py-1 border shadow-sm bg-slate-50 text-slate-600 border-slate-100"
                        >
                          PACKAGING
                        </span>
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-right font-semibold text-gray-700 tabular-nums"
                        data-slot="table-cell"
                      >
                        920
                         Units
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-right"
                        data-slot="table-cell"
                      >
                        <span
                          class="inline-flex items-center gap-1.5 text-[10px] font-black uppercase rounded-lg px-3 py-1 border shadow-sm bg-[#FEF2F2] text-[#DC2626] border-[#FECDD3]"
                        >
                          FAIL RETRY
                        </span>
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-right"
                        data-slot="table-cell"
                      >
                        <button
                          class="group/button inline-flex shrink-0 items-center justify-center bg-clip-padding whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [a]:hover:bg-primary/80 h-7 gap-1 px-2.5 in-data-[slot=button-group]:rounded-lg has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3.5 bg-white text-slate-700 border border-[var(--border-color)] hover:bg-emerald-500 hover:text-white font-bold text-[10px] uppercase rounded-lg"
                          data-slot="button"
                          tabindex="0"
                          type="button"
                        >
                          INSPECT
                        </button>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
